Finished the design for Sign Up page; replaced some text with icons

--- a/corresponder-frontend/assets/css/variables.scss
+++ b/corresponder-frontend/assets/css/variables.scss
@@ -1,4 +1,10 @@
 
 // Colors
 $basicLightGreen: #69CF5D;
+$basicDarkGreen: #3b8239;
 $prettyBlue: #4a84ff;
+
+// Sidebar colors
+$s_mainGrey: #2a2a31;
+$s_titleGrey: #18191e;
+$s_articleGrey: #222228;
