Little css changes; Deleting friends

--- a/corresponder-frontend/assets/css/variables.scss
+++ b/corresponder-frontend/assets/css/variables.scss
@@ -5,6 +5,6 @@ $basicDarkGreen: #3b8239;
 $prettyBlue: #4a84ff;
 
 // Sidebar colors
-$s_mainGrey: #2a2a31;
-$s_titleGrey: #18191e;
-$s_articleGrey: #222228;
+$s_mainGrey: #2b2d3c;
+$s_titleGrey: #1a1e28;
+$s_articleGrey: #20222f;
