Created user's profile card to display as a popup

--- a/corresponder-frontend/assets/css/variables.scss
+++ b/corresponder-frontend/assets/css/variables.scss
@@ -8,3 +8,7 @@ $prettyBlue: #4a84ff;
 $s_mainGrey: #2b2d3c;
 $s_titleGrey: #1a1e28;
 $s_articleGrey: #20222f;
+
+// Card and popups colors
+$c_mainBlue: #578ce6;
+$c_socials: #4c73d3;
