Installed vue-touch-events for swiping purposes

--- a/corresponder-frontend/assets/css/variables.scss
+++ b/corresponder-frontend/assets/css/variables.scss
@@ -13,3 +13,10 @@ $s_articleGrey: #20222f;
 // Card and popups colors
 $c_mainBlue: #578ce6;
 $c_socials: #4c73d3;
+
+
+
+// responsivness //
+
+$tablet: 1150px;
+$mobile: 700px;
