Changed the design of sidebar a bit

--- a/corresponder-frontend/assets/css/variables.scss
+++ b/corresponder-frontend/assets/css/variables.scss
@@ -6,9 +6,13 @@ $basicDarkGreen: #3b8239;
 $prettyBlue: #4a84ff;
 
 // Sidebar colors
-$s_mainGrey: #2b2d3c;
-$s_titleGrey: #1a1e28;
-$s_articleGrey: #20222f;
+$s_mainGrey: #1c1d1f;
+$s_titleGrey: #0f1011;
+$s_articleGrey: #161719;
+
+//$s_mainGrey: #2b2d3c;
+//$s_titleGrey: #1a1e28;
+//$s_articleGrey: #20222f;
 
 // Card and popups colors
 $c_mainBlue: #578ce6;
@@ -17,6 +21,5 @@ $c_socials: #4c73d3;
 
 
 // responsivness //
-
 $tablet: 1150px;
 $mobile: 860px;
